<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iconImagenView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompact=""
                app:srcCompat="@drawable/carta"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:id="@+id/LinealLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImagenView"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/nombrelista"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tipoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text ="@string/tipo_cosas"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:text="@string/activa"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />



        </RelativeLayout>





    </LinearLayout>



</androidx.cardview.widget.CardView>